# GammaGL

./: .gitignore  .readthedocs.yaml  AGENT.md  CONTRIBUTING.md  DR-GST.py  GammaGL_Reference_Guide.md  MANIFEST.in  README.md  a01.py  clean.sh  gammagl_environment.yml  hgat_trainer.py  log_pubmed_paddle.txt  log_pubmed_torch.txt  requirements.txt  run_server.py  setup.py  setup_sample_adj.py  test.py  yunnao_tutotial.md
.circleci/: config.yml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: package.yml  test.yml  test_docs.yml  test_push.yml  test_pypi_package.yml
GammaGL-main/: .clang-format
GammaGL-main/gammagl/: lazy_load_paddle.py
docs/: Makefile  build.sh  requirements.txt
docs/source/: conf.py  index.rst
examples/: aug.py  full_sage.py  gan_trainer.py  gat_trainer.py  gatv2_trainer.py  gcn.py  gcn_trainer.py  gcnii_trainer.py  msgpass_speed_test.py  sgc_trainer.py  speed_test_log.txt
examples/DR_GST/: DR-GST.py  DR_GST.py  r.txt  readme.md
examples/DropEdge/: dropedge_trainer.py
examples/GraphNOTEARS/: GraphNOTEARS_trainer.py
examples/HeCo/: HeCo_train.py  HeCo_trainer.py  README.md  heco_trainer.py
examples/Hid_net/: hid_trainer.py  model_graph  train_graph_epoch_0
examples/InfoGraph/: infograph_trainer.py  infograph_util.py  readme.md
examples/Spco/: README.md  blogcatalog.py
examples/adagad/: README.md  adagad_trainer.py  config_ada-gad.yml  utils.py
examples/agnn/: agnn_trainer.py  readme.md
examples/amgcn/: amgcn_trainer.py  readme.md
examples/amp/: amp_trainer.py  readme.md
examples/appnp/: appnp_trainer.py  readme.md
examples/cagcn/: cagcn_trainer.py  readme.md
examples/chebnet/: chebnet_trainer.py  chebnet_trainer_citeseer.py  readme.md
examples/citgnn/: citgnn_trainer.py  readme.md  utils.py
examples/cobformer/: cal_partition.py  cobformer_trainer.py  cobformer_trainer_batch.py  config.yaml  generate_split.py  partition.py  readme.md  run.py  run_batch.py  runs.sh
examples/coed/: coed_trainer.py  geom_planetoid.py  readme.md  reproduce_cora.sh  run_coed_cora.py
examples/cogsl/: cogsl_trainer.py  readme.md
examples/compgcn/: comgcn_trainer.py  compgcn_trainer.py  readme.md
examples/database/: cora_dataset.py  readme.md
examples/datasets/: test.ipynb
examples/dcgc/: README.md  dcgc_trainer.py
examples/deepwalk/: deepwalk_trainer.py  readme.md
examples/defog/: .gitignore  _sbm_isolated.py  dataset_utils.py  defog_sample_only.py  defog_search.py  defog_trainer.py  defog_utils.py  dist_helper.py  evaluator.py  extra_features.py  extra_features_molecular.py  flow_matching.py  flow_matching_utils.py  flow_utils.py  gpu_monitor_and_run.sh  launch_defog_guacamol.sh  launch_defog_moses.sh  launch_defog_planar.sh  launch_defog_qm9_noh.sh  launch_defog_qm9_withh.sh  launch_defog_sbm.sh  launch_defog_tls.sh  launch_defog_tree.sh  launch_defog_zinc250k.sh  launch_defog_zinc250k_resume.sh  multi_gpu.py  noise_distribution.py  process_guacamol_direct.py  process_guacamol_fast.py  process_guacamol_fast2.py  rate_matrix.py  rdkit_functions.py  readme.md  requirements.txt  run_qm9_3seed_eval.sh  sampler.py  spectre_utils.py  time_distorter.py  tls_metrics.py  train_metrics.py  (+1 more)
examples/dfad_gnn/: readme.md  train_student.py  train_teacher.py
examples/dgcnn/: dgcnn_trainer.py  readme.md
examples/dgi/: README.md  dgi_traienr.py  dgi_trainer.py
examples/dhn/: MA.txt  README.md  dhn_trainer.py
examples/diffpool/: README.md  diffpool_trainer.py
examples/dna/: dna.py  dna_conv.py  dna_trainer.py  readme.md
examples/drgst/: dr_gst.py  dr_gst_trainer.py  readme.md
examples/dropedge/: dropedge_trainer.py  readme.md
examples/dyfss/: dyfss_trainer.py  readme.md
examples/edgeprompt/: README.md  __init__.py  node_edgeprompt_finetune.py  node_edgeprompt_pretrain.py
examples/egt/: config.yaml  egt_trainer.py  readme.md
examples/fagcn/: fagcn_trainer.py  readme.md
examples/fatragnn/: config.yaml  fatragnn_trainer.py  readme.md
examples/fedhgnn/: README.md
examples/film/: film_trainer.py  readme.md
examples/fusedgat/: fusedgat_trainer.py  gat_tester.py  readme.md  test_fusedgat.py  test_gat.py
examples/gaan/: GaAN_trainer.py  gaan_trainer.py  readme.md
examples/gan/: gan_trainer.py  (+1 more)
gammagl/: .gitmodules  RGT_gammagl整合审查报告.md  __init__.py  sample.pyx  typing.py
gammagl/mpops/paddle_ext/: CMakeLists.txt  readme.md  segment_sum.cpp  setup.py
gammagl/mpops/paddle_ext/cpu/: segment_sum_cpu.cpp  segment_sum_cpu.h
gammagl/mpops/paddle_ext/cuda/: segment_sum_cuda.cu  segment_sum_cuda.h
gammagl/mpops/torch_ext/: CMakeLists.txt  gspmm.cpp  hetero_linear.cpp  hetero_linear_test.py  main.cpp  operators.cpp  readme.md  segment_max.cpp  segment_max.h  segment_mean.cpp  segment_mean.h  segment_sum.cpp  segment_sum.h  setup.py  test.py
gammagl/mpops/torch_ext/cpu/: bspmm_sum_cpu.cpp  bspmm_sum_cpu.h  grouped_gemm.cpp  grouped_gemm.h  grouped_gemm_cpu.cpp  grouped_gemm_cpu.h  segment_max_cpu.cpp  segment_max_cpu.h  segment_mean_cpu.cpp  segment_mean_cpu.h  segment_sum_cpu.cpp  segment_sum_cpu.h  spmm_max_cpu.cpp  spmm_max_cpu.h  spmm_mean_cpu.cpp  spmm_mean_cpu.h  spmm_sum_cpu.cpp  spmm_sum_cpu.h
gammagl/mpops/torch_ext/cuda/: grouped_gemm_cuda.cpp  grouped_gemm_cuda.h  segment_max_cuda.cu  segment_mean_cuda.cu  segment_mean_cuda.h  segment_sum_cuda.cu  segment_sum_cuda.h  spmm_cum_cuda.cu  spmm_sum_cuda.cu  spmm_sum_cuda.h
gammagl/mpops/torch_ext/include/: gspmm.h  segment_mean.h  segment_sum.h  utils.h
gammagl/mpops/torch_ext/src/: gspmm.cpp  operators.cpp  segment_max.cpp  segment_mean.cpp  segment_sum.cpp  utils.cpp
gammagl/mpops/torch_segment/: CMakeLists.txt  gspmm.cpp  readme.md  segment_max.cpp  segment_max_cuda.cu  segment_max_cuda.h  setup.py  test.py
gammagl/mpops/torch_segment/cpu/: segment_max_cpu.cpp  segment_max_cpu.h  spmm_sum_cpu.cpp
gammagl/mpops/torch_segment/cuda/: segment_max_cuda.cu  segment_max_cuda.h
gammagraphlibrary/: __init__.py
tests/: conftest.py  test_graph.py  test_public_api.py
(+1470 files in other folders)
